Assets/akanevrc/TeuchiUdon/Tests/src/Exprs/StructSetter2.teuchi
// error
this.transform.position.x <- 100.0;
